; ModuleID = '/home/carl/AnghaBench/git/extr_json-writer.c_jw_array_argv.c'
source_filename = "/home/carl/AnghaBench/git/extr_json-writer.c_jw_array_argv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.json_writer = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @jw_array_argv(%struct.json_writer* %0, i8** %1) #0 {
  %3 = alloca %struct.json_writer*, align 8
  %4 = alloca i8**, align 8
  store %struct.json_writer* %0, %struct.json_writer** %3, align 8
  store i8** %1, i8*** %4, align 8
  br label %5

5:                                                ; preds = %9, %2
  %6 = load i8**, i8*** %4, align 8
  %7 = load i8*, i8** %6, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %16

9:                                                ; preds = %5
  %10 = load %struct.json_writer*, %struct.json_writer** %3, align 8
  %11 = load i8**, i8*** %4, align 8
  %12 = getelementptr inbounds i8*, i8** %11, i32 1
  store i8** %12, i8*** %4, align 8
  %13 = load i8*, i8** %11, align 8
  %14 = ptrtoint i8* %13 to i32
  %15 = call i32 @jw_array_string(%struct.json_writer* %10, i32 %14)
  br label %5

16:                                               ; preds = %5
  ret void
}

declare dso_local i32 @jw_array_string(%struct.json_writer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
